# 3d_explicit_cuda_code_with_locally_computed_weights_one

./: .gitignore  CMakeLists.txt  README.md  build.sh  data_structure.f90  device_conserved_to_primitive_vector.cuf  device_conserved_vector_Ubar.cuf  device_data_structure.cuf  device_fpi_solver.cuf  device_interior_flux_dGxneg.cuf  device_interior_flux_dGxpos.cuf  device_interior_flux_dGyneg.cuf  device_interior_flux_dGypos.cuf  device_interior_flux_dGzneg.cuf  device_interior_flux_dGzpos.cuf  device_limiters.cuf  device_octant_fluxes.cuf  device_outer_flux_dGxneg.cuf  device_outer_flux_dGxpos.cuf  device_outer_flux_dGyneg.cuf  device_outer_flux_dGypos.cuf  device_outer_flux_dGzpos.cuf  device_primitive_to_conserved_vector.cuf  device_q_derivatives.cuf  device_q_variables.cuf  device_qvariables_to_primitive_variables.cuf  device_split_fluxes.cuf  device_state_update.cuf  device_timestep_delt.cuf  device_wall_flux_dGxneg.cuf  device_wall_flux_dGxpos.cuf  device_wall_flux_dGyneg.cuf  device_wall_flux_dGypos.cuf  device_wall_flux_dGzneg.cuf  evaluate_interior_pts_flux_residuals.cuf  evaluate_outer_bdry_pts_flux_residuals.cuf  evaluate_wall_pts_flux_residuals.cuf  generate_connectivity.f90  initial_conditions.f90  job.sh  (+10 more)
